[package]
name = "rmtg"
version = "0.2.0"
edition = "2021"
description = "Remove transparency checkerboard grids from images"
license = "MIT"
repository = "https://github.com/shayyz-code/rmtg"
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp", "gif", "tiff"] }
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
